[package]
name = "tm_poller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
serde = { version = "1.0.180", features = ["derive"] }
reqwest= { version = "0.11.18", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }