[package]
name = "tm_poller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ratatui = { version = "0.22.0", features = ["all-widgets"]}
serde = { version = "1.0.180", features = ["derive"] }
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
chrono = "0.4.26"
anyhow = "1.0.72"
actix-web = "4"
tokio = { version = "1.29.1", features = ["full"] }